tests/stage2/t1_features/error_handling/result_match_exhaustive.fuse
// EXPECTED ERROR:
// error: non-exhaustive match for `Result`

fn describe(r: Result<Int, String>) -> String {
  match r {
    Ok(v) => f"ok: {v}"
  }
}

@entrypoint
fn main() {
  println(describe(Ok(1)))
}
